Change whitespacing and word-wrapping of the help text

--- a/po/hr.po
+++ b/po/hr.po
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: trader 7.4-pre2\n"
 "Report-Msgid-Bugs-To: J.Zaitseff@zap.org.au\n"
 "POT-Creation-Date: 2012-04-14 14:02+1000\n"
-"PO-Revision-Date: 2012-04-19 07:51+1000\n"
+"PO-Revision-Date: 2012-04-19 09:21+1000\n"
 "Last-Translator: Tomislav Krznar <tomislav.krznar@gmail.com>\n"
 "Language-Team: Croatian <lokalizacija@linux.hr>\n"
 "Language: hr\n"
@@ -1079,7 +1079,7 @@ msgstr[2] "Možete prodati ^{%'ld^} dionica."
 #: src/exch.c:774
 #, c-format
 msgid "How many shares do you wish to sell? "
-msgstr "Koliko dionica želite prodati?"
+msgstr "Koliko dionica želite prodati? "
 
 #: src/exch.c:802
 #, c-format
@@ -1327,15 +1327,15 @@ msgid ""
 "        ^e ~. ~. ~. ~. ~. ~. ~. ^s~*^e ~. ^N\n"
 "        ^e ~. ~. ~. ~. ^s~*^e ~. ~. ~. ~. ^N\n"
 msgstr ""
-"^B„Star Traders”^N (Međuzvjezdani trgovci) je jednostavna igra međuzvjezdanog\n"
-"trgovanja. Cilj igre je skupiti što je moguće veće bogatstvo. Ovo činite\n"
-"stvaranjem međuzvjezdanih trgovačkih putova, njihovim proširivanjem i\n"
-"kupovanjem udjela u tvrtkama koje upravljaju njima. Vrijednost dionica se\n"
-"povećava širenjem poslovanja tvrtki, kao i njihova dobit (izražena u\n"
-"postocima). Igrači također mogu posuđivati novce od Međuzvjezdane trgovačke\n"
+"^B„Star Traders”^N  (Međuzvjezdani trgovci)  je jednostavna  igra međuzvjezdanog\n"
+"trgovanja.  Cilj igre  je skupiti što je moguće  veće bogatstvo.  Ovo činite\n"
+"stvaranjem  međuzvjezdanih  trgovačkih   putova,  njihovim  proširivanjem  i\n"
+"kupovanjem udjela  u tvrtkama koje upravljaju njima.   Vrijednost dionica se\n"
+"povećava  širenjem  poslovanja  tvrtki,  kao  i njihova  dobit  (izražena  u\n"
+"postocima).  Igrači također mogu posuđivati novce od Međuzvjezdane trgovačke\n"
 "banke za financiranje kupovanja dodatnih dionica na Burzi.\n"
 "\n"
-"Karta galaksije prikazana je mrežom ^B~x^N x ^B~y^N. Uobičajeni prikaz dijela\n"
+"Karta  galaksije  prikazana  je mrežom  ^B~x^N x ^B~y^N.  Uobičajeni  prikaz  dijela\n"
 "galaksije može biti:\n"
 "\n"
 "        ^e ~. ~. ^s~*^e ~. ~. ~. ^s~*^e ^s~*^e ~. ^N\n"
@@ -1362,9 +1362,9 @@ msgid ""
 "will set up  an ^Boutpost^N,  not belonging  to any company.  Thus, if move ^k~3^N is\n"
 "selected on the above map, a ^o ~+ ^N would be placed at that position.\n"
 msgstr ""
-"Računalo slučajno bira ^B~m^N poteza (označenih s ^k~1^N do ^k~M^N) i postavlja ih na\n"
-"kartu.  Za odabir jednog od označenih položaja pritisnite to slovo.\n"
-"Na primjer, neki potezi na karti mogu biti:\n"
+"Računalo slučajno  bira  ^B~m^N poteza  (označenih s ^k~1^N do ^k~M^N)  i postavlja  ih na\n"
+"kartu.   Za odabir  jednog od  označenih položaja  pritisnite  to slovo.  Na\n"
+"primjer, neki potezi na karti mogu biti:\n"
 "\n"
 "\n"
 "        ^e ^k~1^e ~. ^s~*^e ~. ~. ~. ^s~*^e ^s~*^e ~. ^N\n"
@@ -1374,7 +1374,7 @@ msgstr ""
 "        ^e ~. ~. ~. ~. ^s~*^e ~. ~. ~. ~. ^N\n"
 "\n"
 "\n"
-"Odabir položaja koji ^Bnije^N uz zvijezdu (npr. položaji ^k~1^N, ^k~3^N ili ^k~5^N) će\n"
+"Odabir  položaja koji  ^Bnije^N  uz zvijezdu  (npr. položaji  ^k~1^N,  ^k~3^N  ili  ^k~5^N)  će\n"
 "postaviti ^Bizvidnicu^N, koja ne pripada nijednoj tvrtci.  Tako će odabir poteza\n"
 "^k~3^N na gornjoj karti postaviti ^o ~+ ^N na taj položaj.\n"
 
@@ -1396,15 +1396,15 @@ msgid ""
 "        ^e ~. ^k~2^e ~. ~. ^k~4^e ~. ~. ^s~*^e ^c~B^e ^N\n"
 "        ^e ~. ~. ~. ~. ^s~*^e ~. ~. ~. ^k~8^e ^N\n"
 msgstr ""
-"S druge strane, ako je odabran položaj pokraj zvijezde (ili druge izvidnice),\n"
-"osnovat će se ^Btvrtka^N i njezino će se početno slovo pojaviti na karti.\n"
-"Kao nagradu za osnivanje tvrtke dobit ćete prvih pet njezinih dionica.\n"
-"Na ovaj način možete osnovati ^B~c^N tvrtki.\n"
+"S  druge  strane,  ako  je   odabran  položaj  pokraj  zvijezde  (ili  druge\n"
+"izvidnice), osnovat će  se ^Btvrtka^N i njezino će se  početno slovo pojaviti na\n"
+"karti.   Kao nagradu  za  osnivanje  tvrtke dobit  ćete  prvih pet  njezinih\n"
+"dionica.  Na ovaj način možete osnovati ^B~c^N tvrtki.\n"
 "\n"
-"Ako je odabran položaj pokraj postojeće tvrtke, ona će proširiti svoje\n"
-"poslovanje za jedno polje. ovo povećava cijenu njezinih dionica i vaše\n"
-"prihode. Na primjer, ako je mapa kao što je prikazana dolje, biranjem ^k~6^N\n"
-"ili ^k~8^N će se povećati trgovački put tvrtke ^B~B^N:\n"
+"Ako  je odabran  položaj pokraj  postojeće  tvrtke, ona  će proširiti  svoje\n"
+"poslovanje  za jedno  polje.  Ovo  povećava cijenu  njezinih dionica  i vaše\n"
+"prihode.  Na primjer, ako je mapa kao što je prikazana dolje, biranjem ^k~6^N ili\n"
+"^k~8^N će se povećati trgovački put tvrtke ^B~B^N:\n"
 "\n"
 "        ^e ^k~1^e ~. ^s~*^e ~. ~. ~. ^s~*^e ^s~*^e ~. ^N\n"
 "        ^e ~. ~. ~. ^o~+^e ~. ~. ^k~6^e ~. ~. ^N\n"
@@ -1430,21 +1430,21 @@ msgid ""
 "more valuable:  the company's share price  will increase by a greater amount\n"
 "than it would for outposts not next to stars.\n"
 msgstr ""
-"Odabir položaja pokraj zvijezde povećava vrijednost vaših dionica oko pet\n"
-"puta više nego širenje u polje koje nije pokraj zvijezde. Zato se potez ^k~6^N\n"
+"Odabir položaja  pokraj zvijezde povećava  vrijednost vaših dionica  oko pet\n"
+"puta više nego  širenje u polje koje nije pokraj zvijezde.   Zato se potez ^k~6^N\n"
 "preferira u odnosu na potez ^k~8^N.\n"
 "\n"
 "        ^e ^c~C^e ~. ^s~*^e ~. ~. ~. ^s~*^e ^s~*^e ~. ^N\n"
 "        ^e ^k~1^e ^o~+^e ~. ^o~+^e ~. ~. ^k~6^e ~. ~. ^N\n"
-"        ^e ~. ^s~*^e ~. ~. ~. ~. ^c~B^e ^c~B^e ^c~B^e ^N        Potez ^k~6^N se preferira\n"
-"        ^e ~. ^k~2^e ~. ~. ^k~4^e ~. ~. ^s~*^e ^c~B^e ^N        u odnosu na ^k~8^N.\n"
+"        ^e ~. ^s~*^e ~. ~. ~. ~. ^c~B^e ^c~B^e ^c~B^e ^N        Potez ^k~6^N se preferira u odnosu na ^k~8^N.\n"
+"        ^e ~. ^k~2^e ~. ~. ^k~4^e ~. ~. ^s~*^e ^c~B^e ^N\n"
 "        ^e ~. ~. ~. ~. ^s~*^e ~. ~. ~. ^k~8^e ^N\n"
 "\n"
-"Također možete proširiti tvrtku biranjem položaja pokraj izvidnica. Takve\n"
-"izvidnice će se spojiti u tvrtku. Tako će potez ^k~1^N proširiti tvrtku ^B~C^N\n"
-"za ^Bdva^N polja. Kao bonus, izvidnice pokraj zvijezda su još vrijednije:\n"
-"vrijednost dionice tvrtke će se više povećati nego u slučaju izvidnica koje\n"
-"se ne nalaze uz zvijezde.\n"
+"Također možete  proširiti tvrtku biranjem položaja  pokraj izvidnica.  Takve\n"
+"izvidnice će se spojiti u tvrtku.  Tako će potez ^k~1^N proširiti tvrtku ^B~C^N za ^Bdva^N\n"
+"polja.  Kao  bonus, izvidnice pokraj zvijezda su još vrijednije:  vrijednost\n"
+"dionice  tvrtke  će se više  povećati nego  u slučaju  izvidnica koje  se ne\n"
+"nalaze uz zvijezde.\n"
 
 #: src/help.c:186
 msgid ""
@@ -1465,12 +1465,12 @@ msgid ""
 "proportional to the amount  owned in the old company.  As well, a cash bonus\n"
 "is also paid, proportional to the percentage of the old company owned.\n"
 msgstr ""
-"Ako su dvije tvrtke na karti odvojene samo jednim poljem, mogu se ^Bspojiti^N\n"
-"u jednu tvrtku odabirom tog položaja (ako je dostupan). Na primjer, na donjoj\n"
-"karti, tvrtke ^B~A^N i ^B~B^N se mogu spojiti odabirom ^k~5^N. Kad se to\n"
-"dogodi, tvrtka koja ima veću vrijednost preuzima tvrtku manje vrijednosti.\n"
-"Ovdje tvrtka ^B~B^N može preuzeti tvrtku ^B~A^N. Tvrtka ^B~A^N prestaje postojati,\n"
-"iako se poslije može pojaviti kao potpuno nova tvrtka.\n"
+"Ako su dvije tvrtke na karti  odvojene samo jednim poljem, mogu se ^Bspojiti^N u\n"
+"jednu tvrtku odabirom tog položaja (ako je dostupan).  Na primjer, na donjoj\n"
+"karti,  tvrtke ^B~A^N i ^B~B^N  se mogu spojiti odabirom ^k~5^N.  Kad se  to dogodi, tvrtka\n"
+"koja ima veću vrijednost preuzima  tvrtku manje vrijednosti.  Ovdje tvrtka ^B~B^N\n"
+"može preuzeti  tvrtku ^B~A^N.  Tvrtka ^B~A^N prestaje postojati,  iako se poslije može\n"
+"pojaviti kao potpuno nova tvrtka.\n"
 "\n"
 "        ^e ^k~1^e ~. ^s~*^e ~. ~. ~. ^s~*^e ^s~*^e ~. ^N\n"
 "        ^e ~. ~. ~. ^c~A^e ^c~A^e ^k~5^e ^c~B^e ~. ~. ^N\n"
@@ -1478,9 +1478,9 @@ msgstr ""
 "        ^e ~. ^k~2^e ~. ~. ~. ~. ~. ^s~*^e ^c~B^e ^N\n"
 "        ^e ~. ~. ~. ~. ^s~*^e ~. ^o~+^e ~. ~. ^N\n"
 "\n"
-"Nakon spajanja tvrtki, igrači dobivaju broj dionica dominantne tvrtke\n"
-"proporcionalan udjelu u staroj tvrtci. Također se isplaćuje gotovinski bonus\n"
-"proporcionalan postotku udjela u staroj tvrtci.\n"
+"Nakon  spajanja  tvrtki,  igrači  dobivaju broj  dionica  dominantne  tvrtke\n"
+"proporcionalan  udjelu u  staroj  tvrtci.  Također  se isplaćuje  gotovinski\n"
+"bonus proporcionalan postotku udjela u staroj tvrtci.\n"
 
 #: src/help.c:205
 msgid ""
@@ -1501,22 +1501,22 @@ msgid ""
 "The ^Bwinner of the game^N  is the person  with the greatest  net  worth  (total\n"
 "value of cash, stock and debt).  ^HGood luck^N and may the best person win!\n"
 msgstr ""
-"Kada odaberete svoj potez, ulazite u ^BMeđuzvjezdanu burzu^N. Ovdje možete\n"
-"kupovati dionice, prodavati ih, posuđivati novce od Trgovačke banke ili\n"
-"otplatiti dio vašeg duga (ako postoji). Primijetite da svaka tvrtka izdaje\n"
-"ograničen broj dionica -- ne možete kupovati cijelo vrijeme! Međutim, možete\n"
-"tražiti od tvrtke izdavanje novih dionica. Ako imate veću količinu udjela\n"
-"u tvrtci, veće su vam šanse za uspjeh.\n"
+"Kada  odaberete svoj  potez, ulazite  u  ^BMeđuzvjezdanu burzu^N.   Ovdje možete\n"
+"kupovati  dionice,  prodavati ih, posuđivati  novce od  Trgovačke  banke ili\n"
+"otplatiti dio vašeg duga  (ako postoji).  Primijetite da svaka tvrtka izdaje\n"
+"ograničen  broj dionica  --  ne možete  kupovati  cijelo vrijeme!   Međutim,\n"
+"možete tražiti od  tvrtke izdavanje novih dionica.  Ako  imate veću količinu\n"
+"udjela u tvrtci, veće su vam šanse za uspjeh.\n"
 "\n"
-"Igra uobičajeno završava nakon ^B~t^N poteza. Međutim, možete završiti ranije\n"
-"pritiskom ^K<CTRL><C>^N umjesto odabira poteza. Također pojedini igrači mogu\n"
-"objaviti bankrot u svakom trenutku. Ako je vaš dug prevelik, Banka to može\n"
-"učiniti umjesto vas! Ako ste prezauzeti za dovršavanje igre, možete je\n"
+"Igra uobičajeno  završava nakon ^B~t^N poteza.  Međutim,  možete završiti ranije\n"
+"pritiskom  ^K<CTRL><C>^N  umjesto odabira poteza.  Također pojedini  igrači mogu\n"
+"objaviti bankrot u svakom trenutku.  Ako  je vaš dug prevelik, Banka to može\n"
+"učiniti  umjesto vas!   Ako ste  prezauzeti za  dovršavanje igre,  možete je\n"
 "spremiti i nastaviti kasnije.\n"
 "\n"
 "\n"
-"^BPobjednik igre^N je osoba koja ima najveću ukupnu vrijednost (ukupna\n"
-"vrijednost gotovine, dionica i duga). ^HSretno^N i neka najbolji pobijedi!\n"
+"^BPobjednik  igre^N  je  osoba   koja  ima  najveću  ukupnu  vrijednost  (ukupna\n"
+"vrijednost gotovine, dionica i duga).  ^HSretno^N i neka najbolji pobijedi!\n"
 
 #: src/help.c:225
 msgid "@ Help text, page 7\n"
