Prepare for release: insert today's date into NEWS

--- a/NEWS
+++ b/NEWS
@@ -15,8 +15,8 @@ consult the Subversion repository for "trader" on The ZAP Group web server
 at http://www.zap.org.au/services/svn/.
 
 
-Version 7.4 (not yet released)
-------------------------------
+Version 7.4 (9th May, 2012)
+---------------------------
 
 For the  first time since  the CP/M-80 version  of Star Traders,  the game
 algorithms  have  been carefully  reviewed  and  revised.  In  particular,
