The gperf(1) utility program is not always needed
The gperf(1) utility program is only needed if the timestamps on the
lib/iconv_open-*.h files are older than the corresponding *.gperf files.

--- a/INSTALL
+++ b/INSTALL
@@ -48,7 +48,7 @@ and installation:
     systems, these files are part of XXX-dev packages.
 
 6.  The GNU Perfect Hash Function  Generator, gperf.  This utility program
-    is required for parts of the GNU Portability Library.
+    may be required for parts of the GNU Portability Library.
 
 
 Installation
