Change "Bokmaal" to "Bokmål", the correct way to name this language

--- a/NEWS
+++ b/NEWS
@@ -18,7 +18,7 @@ at http://www.zap.org.au/services/svn/.
 Version 7.5 (not yet released)
 ------------------------------
 
-Added a translation for Norwegian Bokmaal, with thanks to Johnny A. Solbu.
+Added a translation for Norwegian Bokmål,  with thanks to Johnny A. Solbu.
 Updated auxiliary files to the  latest versions available  from the Gnulib
 GNU Portability Library and the GNU Autoconf project.
 
