Update nb.po to the latest version available from TP

--- a/po/nb.po
+++ b/po/nb.po
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: trader 7.4\n"
 "Report-Msgid-Bugs-To: J.Zaitseff@zap.org.au\n"
 "POT-Creation-Date: 2012-05-09 13:57+1000\n"
-"PO-Revision-Date: 2012-11-08 08:46+0100\n"
+"PO-Revision-Date: 2012-11-08 16:48+0100\n"
 "Last-Translator: Johnny A. Solbu <johnny@solbu.net>\n"
 "Language-Team: Norwegian Bokmaal <i18n-nb@lister.ping.uio.no>\n"
 "Language: nb\n"
@@ -133,7 +133,7 @@ msgstr ""
 msgid "Report bugs to %s <%s>.\n"
 msgstr ""
 "Rapporter feil, på engelsk, til %s <%s>.\n"
-"Oversettelsesfeil kan rapporteres til <i18n-nb@lister.ping.uio.no>\n"
+"Oversettelsesfeil kan rapporteres til <i18n-nb@lister.ping.uio.no>.\n"
 
 #. TRANSLATORS: %s is the e-mail address for reporting bugs.  As
 #. with the previous string, please add ANOTHER line with the
@@ -145,7 +145,7 @@ msgstr ""
 msgid "Report bugs to <%s>.\n"
 msgstr ""
 "Rapporter feil, på engelsk, til <%s>.\n"
-"Oversettelsesfeil kan rapporteres til <i18n-nb@lister.ping.uio.no>\n"
+"Oversettelsesfeil kan rapporteres til <i18n-nb@lister.ping.uio.no>.\n"
 
 #. TRANSLATORS: The first %s is for packagers and may be
 #. something like "Debian".
@@ -986,7 +986,7 @@ msgstr "Aksjeportefølge: "
 #, c-format
 msgctxt "label|Stock B"
 msgid "Percentage owned: "
-msgstr "Eierandel: "
+msgstr "Eierandel:       "
 
 #: src/exch.c:638
 #, c-format
@@ -1322,15 +1322,15 @@ msgid ""
 "        ^e ~. ~. ~. ~. ~. ~. ~. ^s~*^e ~. ^N\n"
 "        ^e ~. ~. ~. ~. ^s~*^e ~. ~. ~. ~. ^N\n"
 msgstr ""
-"^BStar Traders^N er et enkelt spill med interstellar handel. Målet med spillet\n"
-"er å samle størst mulig formue. Dette gjøres ved å skape interstellare\n"
-"seilingsleder, utvide dem og kjøpe aksjer i selskapene for å kontrollere\n"
-"dem. Aksjer stiger i verdi ettesom selskapsoperasjonene utvides. Dessuten,\n"
-"avkastningen på hver del (i prosent) endres også. Spillere kan også\n"
-"låne fra Interstellar Handelsbank for å finansiere flere kjøp på børsen.\n"
+"^BStar Traders^N  er et enkelt spill med  interstellar handel. Målet med spillet\n"
+"er å samle  størst  mulig  formue. Dette  gjøres  ved å skape  interstellare\n"
+"seilingsleder,  utvide dem  og kjøpe aksjer  i selskapene  for å kontrollere\n"
+"dem. Aksjer  stiger i verdi ettesom  selskapsoperasjonene utvides. Dessuten,\n"
+"avkastningen på hver del (i prosent) endres også. Spillere kan også låne fra\n"
+"Interstellar Handelsbank for å finansiere flere kjøp på børsen.\n"
 "\n"
-"Kartet over galaksen er representert ved en ^B~x^N x ^B~y^N rutenett.\n"
-"En typisk seksjon kan være:\n"
+"Kartet  over galaksen  er representert  ved en  ^B~x^N x ^B~y^N  rutenett. En typisk\n"
+"seksjon kan være:\n"
 "\n"
 "        ^e ~. ~. ^s~*^e ~. ~. ~. ^s~*^e ^s~*^e ~. ^N\n"
 "        ^e ~. ~. ~. ~. ~. ~. ~. ~. ~. ^N        ^e ~. ^N forestiller ^Btomrom^N,\n"
@@ -1356,9 +1356,9 @@ msgid ""
 "will set up  an ^Boutpost^N,  not belonging  to any company.  Thus, if move ^k~3^N is\n"
 "selected on the above map, a ^o ~+ ^N would be placed at that position.\n"
 msgstr ""
-"Datamaskinen velger ^B~m^N trekk (merket ^k~1^N to ^k~M^N) vilkårlig, og legger disse på\n"
-"kartet. For å velge noen av de markerte stedene, trykk på bokstaven.\n"
-"Noen av trekkene på kartet kan for eksempel være:\n"
+"Datamaskinen velger  ^B~m^N  trekk (merket ^k~1^N to ^k~M^N) vilkårlig, og legger disse på\n"
+"kartet. For å velge noen av de markerte stedene, trykk på bokstaven. Noen av\n"
+"trekkene på kartet kan for eksempel være:\n"
 "\n"
 "\n"
 "        ^e ^k~1^e ~. ^s~*^e ~. ~. ~. ^s~*^e ^s~*^e ~. ^N\n"
@@ -1368,9 +1368,9 @@ msgstr ""
 "        ^e ~. ~. ~. ~. ^s~*^e ~. ~. ~. ~. ^N\n"
 "\n"
 "\n"
-"Å velge en posisjon som ^Bikke^N er ved siden av en stjerne (trekk som ^k~1^N, ^k~3^N\n"
-"eller ^k~5^N) vil sette opp en ^Butpost^N, som ikke tilhører noe selskap. Slik at\n"
-"hvis trekk ^k~3^N er valgt på kartet ovenfor vil ^o ~+ ^N bli plassert ved den\n"
+"Å velge en posisjon  som ^Bikke^N er ved siden  av en stjerne  (trekk som  ^k~1^N,  ^k~3^N\n"
+"eller ^k~5^N)  vil sette opp  en ^Butpost^N,  som ikke tilhører  noe selskap. Slik at\n"
+"hvis  trekk ^k~3^N er  valgt  på  kartet  ovenfor vil ^o ~+ ^N bli  plassert  ved  den\n"
 "posisjonen.\n"
 
 #: src/help.c:150
@@ -1391,15 +1391,15 @@ msgid ""
 "        ^e ~. ^k~2^e ~. ~. ^k~4^e ~. ~. ^s~*^e ^c~B^e ^N\n"
 "        ^e ~. ~. ~. ~. ^s~*^e ~. ~. ~. ^k~8^e ^N\n"
 msgstr ""
-"Hvis på den annen side en posisjon ved siden av en stjerne (eller annen\n"
-"utpost) er valgt, vil et ^Bfirma^N bli dannet og dets bokstav vises på kartet.\n"
-"Som en belønning for å skape firmaet får du de første fem aksjene. Opp til\n"
-"^B~c^N firmaer kan opprettes på denne måten.\n"
+"Hvis  på den annen side  en posisjon  ved siden  av en stjerne  (eller annen\n"
+"utpost) er valgt, vil et ^Bfirma^N bli dannet  og dets  bokstav vises på kartet.\n"
+"Som en belønning for å skape firmaet får du de første fem aksjene. Opp til ^B~c^N\n"
+"firmaer kan opprettes på denne måten.\n"
 "\n"
 "Hvis en posisjon ved siden av et eksisterende selskap er valgt vil selskapet\n"
-"utvide sin virksomhet med én rute. Dette øker kostnadene til dets aksjer\n"
-"og dermed avkastningen. Dermed, hvis kartet er som vist nedenfor,\n"
-"å velge ^k~6^N eller ^k~8^N øker selskapet ^B~B^Ns skipslei:\n"
+"utvide sin virksomhet  med én rute. Dette øker kostnadene til dets aksjer og\n"
+"dermed  avkastningen. Dermed,  hvis kartet  er som vist nedenfor,  å velge ^k~6^N\n"
+"eller ^k~8^N øker selskapet ^B~B^Ns skipslei:\n"
 "\n"
 "        ^e ^k~1^e ~. ^s~*^e ~. ~. ~. ^s~*^e ^s~*^e ~. ^N\n"
 "        ^e ~. ~. ~. ^o~+^e ~. ~. ^k~6^e ~. ~. ^N\n"
@@ -1425,8 +1425,8 @@ msgid ""
 "more valuable:  the company's share price  will increase by a greater amount\n"
 "than it would for outposts not next to stars.\n"
 msgstr ""
-"Å velge posisjoner ved siden av stjerner øker verdien av din beholdning med\n"
-"ca. fem ganger så mye som en forlengelse som ikke er ved siden av en\n"
+"Å velge posisjoner ved siden  av stjerner øker verdien av din beholdning med\n"
+"ca. fem  ganger  så mye som  en forlengelse  som  ikke  er ved  siden  av en\n"
 "stjerne. Derfor bør trekk ^k~6^N foretrekkes fremfor ^k~8^N.\n"
 "\n"
 "        ^e ^c~C^e ~. ^s~*^e ~. ~. ~. ^s~*^e ^s~*^e ~. ^N\n"
@@ -1435,10 +1435,10 @@ msgstr ""
 "        ^e ~. ^k~2^e ~. ~. ^k~4^e ~. ~. ^s~*^e ^c~B^e ^N\n"
 "        ^e ~. ~. ~. ~. ^s~*^e ~. ~. ~. ^k~8^e ^N\n"
 "\n"
-"Du kan også utvide ethvert selskap ved å velge posisjoner ved siden av\n"
-"utposter. Slike utposter vil bli slukt av det selskapet. Dermed vil trekk ^k~1^N\n"
-"utvide selskap ^B~C^N med ^Bto^N kvadrater. Som en bonus er utposter ved siden av\n"
-"stjernene mer verdifulle: selskapets aksjekurs vil øke med en større mengde\n"
+"Du kan også  utvide ethvert  selskap  ved  å velge posisjoner  ved  siden av\n"
+"utposter. Slike utposter  vil bli slukt av det selskapet. Dermed vil trekk ^k~1^N\n"
+"utvide  selskap ^B~C^N  med ^Bto^N kvadrater. Som en bonus  er utposter  ved siden av\n"
+"stjernene mer verdifulle: selskapets aksjekurs  vil øke med en større mengde\n"
 "enn det ville gjort for utposter som ikke er ved siden av stjerner.\n"
 
 #: src/help.c:186
@@ -1460,21 +1460,21 @@ msgid ""
 "proportional to the amount  owned in the old company.  As well, a cash bonus\n"
 "is also paid, proportional to the percentage of the old company owned.\n"
 msgstr ""
-"Hvis to selskaper skilles på kartet ved bare én rute, kan de ^Bfusjoneres^N i\n"
-"ett selskap ved å velge den posisjonen (hvis tilgjengelig). For eksempel på\n"
-"kartet nedenfor kan bedriftene ^B~A^N og ^B~B^N fusjoneres ved å velge ^k~5^N. Når dette\n"
-"skjer tar selskapet med størst aktiva over det andre. Her kan selskap\n"
-"^B~B^N ta over selskap ^B~A^N. Selskap ^B~A^N opphører å eksistere, selv om det\n"
-"kan dukke opp igjen som en helt nytt selskap på et senere tidspunkt.\n"
+"Hvis to selskaper  skilles på kartet  ved bare  én rute, kan de ^Bfusjoneres^N i\n"
+"ett selskap  ved å velge den posisjonen (hvis tilgjengelig). For eksempel på\n"
+"kartet nedenfor  kan bedriftene ^B~A^N og ^B~B^N  fusjoneres  ved å velge ^k~5^N. Når dette\n"
+"skjer tar selskapet  med størst aktiva over det andre. Her kan  selskap ^B~B^N ta\n"
+"over selskap ^B~A^N. Selskap ^B~A^N opphører  å eksistere, selv  om det kan  dukke opp\n"
+"igjen som en helt nytt selskap på et senere tidspunkt.\n"
 "\n"
 "        ^e ^k~1^e ~. ^s~*^e ~. ~. ~. ^s~*^e ^s~*^e ~. ^N\n"
 "        ^e ~. ~. ~. ^c~A^e ^c~A^e ^k~5^e ^c~B^e ~. ~. ^N\n"
-"        ^e ~. ^s~*^e ~. ~. ^c~A^e ~. ^c~B^e ^c~B^e ^c~B^e ^N        trekk ^k~5^N fusjonerer selskapene ^B~A^N og ^B~B^N.\n"
+"        ^e ~. ^s~*^e ~. ~. ^c~A^e ~. ^c~B^e ^c~B^e ^c~B^e ^N        Trekk ^k~5^N fusjonerer selskapene ^B~A^N og ^B~B^N.\n"
 "        ^e ~. ^k~2^e ~. ~. ~. ~. ~. ^s~*^e ^c~B^e ^N\n"
 "        ^e ~. ~. ~. ~. ^s~*^e ~. ^o~+^e ~. ~. ^N\n"
 "\n"
-"Når selskaper fusjonerer blir spillerne tildelt aksjer i det dominerende\n"
-"selskapet proporsjonal med mengden eid i det gamle selskapet. En kontant-\n"
+"Når selskaper  fusjonerer  blir spillerne  tildelt aksjer  i det dominerende\n"
+"selskapet  proporsjonal med mengden  eid i det  gamle selskapet. En kontant-\n"
 "bonus blir og utbetalt, proporsjonalt med eierandelen i det gamle selskapet.\n"
 
 #: src/help.c:205
@@ -1496,21 +1496,21 @@ msgid ""
 "The ^Bwinner of the game^N  is the person  with the greatest  net  worth  (total\n"
 "value of cash, stock and debt).  ^HGood luck^N and may the best person win!\n"
 msgstr ""
-"Når du har valgt ditt trekk går du inn i ^BInterstellar Børs^N. Her kan du\n"
-"kjøpe og selge aksjer, låne fra Handelsbanken eller tilbakebetale noe av\n"
-"gjelden din (hvis det er aktuelt). Merk at hvert selskap utsteder et\n"
-"begrenset antall aksjer — du kan ikke fortsette å kjøpe for alltid! Du kan\n"
-"imidlertid by på flere aksjer som utstedes. Du har en bedre sjanse for å\n"
-"lykkes hvis du eier en større andel av selskapet.\n"
+"Når du har valgt ditt trekk går du inn i ^BInterstellar Børs^N. Her kan du kjøpe\n"
+"og selge aksjer, låne fra Handelsbanken  eller tilbakebetale  noe av gjelden\n"
+"din  (hvis det  er aktuelt). Merk at hvert  selskap  utsteder  et  begrenset\n"
+"antall aksjer — du kan ikke fortsette  å kjøpe for alltid! Du kan imidlertid\n"
+"by på flere aksjer som utstedes. Du har en bedre sjanse for å lykkes hvis du\n"
+"eier en større andel av selskapet.\n"
 "\n"
-"Normalt slutter spillet etter ^B~t^N runder. Men du kan avslutte tidligere\n"
-"ved å trykke ^K<CTRL><C>^N når anmodet om å velge et trekk. Individuelle\n"
-"spillere kan erklære seg konkurs når som helst. Hvis gjelden er stor nok,\n"
-"kan banken gjøre dette for deg! Hvis du ikke fullfører spillet i den tiden\n"
-"du har tilgjengelig, kan du lagre spillet og fortsette senere.\n"
+"Normalt slutter spillet etter  ^B~t^N  runder. Men du kan avslutte tidligere ved\n"
+"å trykke  ^K<CTRL><C>^N  når anmodet  om å velge et trekk. Individuelle spillere\n"
+"kan erklære seg  konkurs når som helst. Hvis gjelden er stor nok, kan banken\n"
+"gjøre dette  for deg! Hvis du  ikke  fullfører  spillet  i den tiden  du har\n"
+"tilgjengelig, kan du lagre spillet og fortsette senere.\n"
 "\n"
 "\n"
-"^BVinneren av spillet^N er den personen med størst formue (totalverdi av\n"
+"^BVinneren  av  spillet^N  er  den personen  med  størst  formue  (totalverdi av\n"
 "kontanter, aksjer og gjeld). ^HLykke til^N, må den beste vinne!\n"
 
 #: src/help.c:225
