--- a/po/nb.po
+++ b/po/nb.po
@@ -1,7 +1,7 @@
 # *************************************************************************
 # *                                                                       *
 # *            Norwegian Bokmål Translations for Star Traders             *
-# *                   Copyright (C) 2012, John Zaitseff                   *
+# *                 Copyright (C) 2012-13, John Zaitseff                  *
 # *                                                                       *
 # *************************************************************************
 #
@@ -12,10 +12,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: trader 7.4\n"
+"Project-Id-Version: trader 7.5\n"
 "Report-Msgid-Bugs-To: J.Zaitseff@zap.org.au\n"
 "POT-Creation-Date: 2012-05-09 13:57+1000\n"
-"PO-Revision-Date: 2012-11-08 16:48+0100\n"
+"PO-Revision-Date: 2013-02-02 10:47+1100\n"
 "Last-Translator: Johnny A. Solbu <johnny@solbu.net>\n"
 "Language-Team: Norwegian Bokmaal <i18n-nb@lister.ping.uio.no>\n"
 "Language: nb\n"
